prevent product jumping

--- a/apps/web/src/app/food/scanner/scanned-code/FoodProductSummary.module.css
+++ b/apps/web/src/app/food/scanner/scanned-code/FoodProductSummary.module.css
@@ -1,5 +1,6 @@
 .imgAndDescFlex {
   position: relative;
+  min-height: 130px;
 
   padding: var(--mantine-spacing-md);
   overflow: clip;
